#2 #refactor #global - refactored all for chatRoom entity